assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Raleway&display=swap');

/* Core Page Styles */

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    height: 100%;
    font-family: Raleway, sans-serif;
  }

  html {
    height: 100%;
    background-color: #6A889C;
  }

  footer {
      display: flex;
      margin-top: auto;
      position: fixed;
      bottom: 0;
  }

/* Style game title */

.game-title {
    text-align: center;
    font-size: 1.75em;
    padding-top: 10px;
    color: #ed4d29;
    font-family: Fredoka, sans-serif;
}

/* Style mute button */

.mute-button button {
    position: absolute;
    top: 20px;
    right: 20px;
    font-size: 2.5em;
    color: #40525e;
    padding: 0 5px 0 5px;
    border: 1px solid #ed4d29;
    border-radius: 5px;
    outline: none;
    background-color:#ed4d29;
    cursor: pointer;
    transition: all 0.3s ease;
}

.mute-button button:hover {
    color:#ed4d29;
    background-color: #40525e;
}

/* Style Game Type Select Div */

#game-modes {
    position: absolute;
    display: none;
    flex-direction: column;
    width: 400px;
    height: 200px;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 200;
    background-color: #6A889C;
    text-align: center;
    color: #20292f;
    border-radius: 10px;
}

#game-modes button {
    border: 1px solid #ed4d29;
    border-radius: 5px;
    margin: 10px;
    padding: 5px 10px 5px 10px;
    background-color:#ed4d29;
    color: #40525e;
    font-size: 15px;
    font-weight: 900;
    cursor: pointer;
    transition: all 0.3s ease;
}

#game-modes button:hover {
    color:#ed4d29;
    background-color: #40525e;
}

/* Style main game board and background */

.game-board {
    width: 95%;
    max-width: 900px;
    height: 80vh;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-image: url(../images/10-downing-street-bg-fleg-cartoom.png);
    background-size: cover;
    cursor: url(../images/cursor-protocol.cur), url(../images/cursor-protocol.png), crosshair;
    touch-action: manipulation;
}

/* Style Score Counter and Timer */

.time-score-area {
    display: flex;
}

.score,
.time,
.miss,
.hit {
    color: #fff;
    background-color: rgba(106, 136, 156, 1);
    border-radius: 20px;
    font-size: 5em;
    font-weight: 900;
    display: flex;
    align-items: center;
}

/* Style individual counter elements */

.score {
    position: absolute;
    top: 20px;
    left: 20px;
}

.miss {
    position: absolute;
    top: 80px;
    left: 20px;
}

.time {
    position: absolute;
    top: 20px;
    right: 20px;
}
.time p {
    font-size: 15px;
}
.hit {
    position: absolute;
    top: 20px;
    left: 5px;
    font-size: 15px;
    color: #fff;
    background-color: rgba(106, 136, 156, 1);
}

.hit p {
    position: absolute;
    left: 25px;
    font-weight: 900;
}
.no-hit {
    position: absolute;
    top: 80px;
    left: 5px;
    color: #fff;
    background-color: rgba(106, 136, 156, 1);
}

.no-hit p {
    position: absolute;
    left: 25px;
    top: 55px;
    font-weight: 900;
}

.hit p,
.no-hit p {
    background-color: #ed4d29;
    border-radius: 5px;
    padding: 2px;
}

/* Style Start and Rules Buttons */

.instructions {
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
    position: absolute;
    bottom: 0;
    left: 50%;
    transform: translate(-50%, -50%);
}

button {
    cursor: pointer;
    outline: none;
}

.instructions button {
    border: 1px solid #ed4d29;
    border-radius: 5px;
    margin: 10px;
    padding: 5px 10px 5px 10px;
    background-color:#ed4d29;
    color: #40525e;
    font-size: 15px;
    font-weight: 900;
    cursor: pointer;
    transition: all 0.3s ease;
}

.instructions button:hover {
    color:#ed4d29;
    background-color: #40525e;
}

/* Style mole hole area */

.hole-area {
    width: 800px;
    height: 400px;
    margin: 200px auto 0 auto;
    display: flex;
    flex-wrap: wrap;
}

.mole-hole {
    flex: 1 0 33.33%;
    position: relative;
    overflow: hidden;
}

.mole-hole:after {
    content: '';
    display: block;
    background-image: url(../images/manhole.png);
    transform: scale(1.5);
    position: absolute;
    width: 100%;
    height: 50px;
    left: 35%;
    z-index: 2;
    bottom: 10px;
    background-size: contain;
    background-repeat: no-repeat;
}

/* Styling mole - mole hidden by default */

.boris {
    background-image: url(../images/boris-popup.png);
    position: absolute;
    top: 100%;
    width: 100%;
    height: 100%;
    background-repeat: no-repeat;
    background-position: bottom;
    transition: 0.5s;
    background-size: 60%;
    z-index: 3;
}

.mole-hole.peek .boris {
    top: 0;
    transition: 0.5s ease-in-out;
}

/* Styling score pop up */

.final-score {
    padding: 0 10px 0 10px;
}

.final-score h2 {
    color: #20292f;
    font-size: 30px;
    margin-top: 50px;
}

.final-score p {
    font-size: 25px;
    text-align: center;
}

.fscorebtn {
    border: 1px solid #ed4d29;
    border-radius: 5px;
    margin: 10px;
    padding: 5px 10px 5px 10px;
    outline: none;
    background-color:#ed4d29;
    color: #40525e;
    font-size: 15px;
    font-weight: 900;
    cursor: pointer;
    transition: all 0.3s ease;
}

.fscorebtn:hover {
    color:#ed4d29;
    background-color: #40525e;
}


#fscore {
    font-size: 100px;
    font-weight: 900;
    color: #ed4d29;
    text-align: center;
}

/* Styling Rules and Feedback Pop Up - Hidden by default */

.feedback,
.final-score {
    display: none;
    position: absolute;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    left: 50%;
    transform: translate(-50%, -50%);
    transition: 400ms ease-in-out;
    border: 1px solid #ed4d29;
    border-radius: 10px;
    background-color: rgba(106, 136, 156, 0.9);
    width: auto;
    height: 425px;
    z-index: 100;
}

.rules-title,
.feedback-title {
    display: flex;
    justify-content: space-evenly;
}

/* Styling Rules Pop up */

.rules {
    display: none;
    position: absolute;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    left: 50%;
    transform: translate(-50%, -50%);
    transition: 400ms ease-in-out;
    color: #20292f;
    font-weight: 900;
    border: 1px solid #ed4d29;
    border-radius: 10px;
    background-color: rgba(106, 136, 156, 0.9);
    width: 600px;
    height: 400px;
    line-height: 1.3;
    z-index: 100;
}

.rules-body {
    padding: 20px;
    text-align: center;
    margin-bottom: 10px;
}

.rules-body p {
    padding-top: 10px;
    padding-bottom: 10px;
}

.rules-title {
    margin-top: 20px;
}

.feedback-title h2 {
    color: #20292f;
}

#close-score,
#close-feedback,
#close-rules {
    position: absolute;
    top: 5px;
    right: 10px;
    font-size: 20px;
}

/* Styling star rating in feedback form */

.star-container {
    position: relative;
    width: 400px;
    padding: 20px 30px;
    border-radius: 5px;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

.star-container .thank-you-text {
    font-size: 25px;
    color: #fff;
    font-weight: 900;
}

.star-container .submitted {
    display: none;
}

.star-container .star-rating input {
    display: none;
} 

.star-rating label {
    font-size: 40px;
    color: #444;
    padding: 10px;
    float: right;
    transition: all 0.2s ease;
}
input:not(:checked) ~ label:hover,
input:not(:checked) ~ label:hover ~ label {
    color: #ed4d29;
}

input:checked ~ label {
    color: #ed4d29;
}

/* Style to change form header based on star selection */

input#rate-5:checked ~ label {
    color: #ed4d29;
    text-shadow: 0 0 20px rgba(106, 136, 156, 0.9);
}

#rate-1:checked ~ form header:before {
    content: "I hate it";
}
#rate-2:checked ~ form header:before {
    content: "I don't like it";
}
#rate-3:checked ~ form header:before {
    content: "I like it";
}
#rate-4:checked ~ form header:before {
    content: "I love it";
}
#rate-5:checked ~ form header:before {
    content: "This is the best thing ever!!!";
}

.star-container form {
    display: none;
}

input:checked ~ form {
    display: block;
}

/* Styling form text rating area */

form header {
    width: 100%;
    font-size: 25px;
    color: #20292f;
    font-weight: 900;
    margin: 5px 0 20px 0;
    text-align: center;
    transition: all 0.3s ease;
}

/* Style form text area */

form .textarea {
    height: 100%;
    width: 100%;
    overflow: hidden;
    color: #20292f;
}

form .textarea textarea {
    height: 100%;
    width: 100%;
    outline: none;
    border: 1px solid #ed4d29;
    color: #20292f;
    background-color: rgba(106, 136, 156, 0.9);
    padding: 10px;
    font-size: 15px;
    font-weight: 900;
    resize: none;
}

/* Style form button */

form .submit-button {
    height: 45px;
    width: 100px;
    margin: 15px 0;
    left: 50%;
    transform: translate(-50%, -50%);
    position: absolute;
    top: 250px;
}

form .submit-button button {
    height: 100%;
    width: 100%;
    border: 1px solid #ed4d29;
    outline: none;
    background-color:#ed4d29;
    color: #40525e;
    font-size: 15px;
    font-weight: 900;
    cursor: pointer;
    transition: all 0.3s ease;
}

form .submit-button button:hover {
    color:#ed4d29;
    background-color: #40525e;
}

/* Style social media links */

#social {
    bottom: 0;
    position: fixed;
    width: 300px;
}

#social-links {
    text-align: center;
    padding: 0;
}

#social-links li {
    display: inline-block;
    list-style-type: none;
    margin: 5px;
    padding: 10px;
}

#social-links a {
    text-decoration: none;
    color: inherit;
    align-items: center;
}

#social-links li:hover {
    color: #ed4d29;
}

/* Media query to display div asking players to rotate phone horizontally to play */

.rotation-div {
    display: none;
}


@media screen and (max-width: 567px) {

    .rotation-div {
        display: block;
        position: fixed;
        width: 100%;
        height: 100vh;
        top: 0px;
        right: 0px;
        bottom: 0px;
        left: 0px;
        background-color: #40525e;
        z-index: 9999;
        overflow: visible;
    }

    .rotation-div p {
        text-align: start;
        color: #ed4d29;
        padding: 20px;
        font-size: 2em;
    }

    .rotation-div img {
        transform: scale(0.1);
        text-align: center;
        margin: 0;
        position: absolute;
        top: 70%;
        left: 25%;
        transform: translate(-50%, -50%);
    }
}

/* Media query for devices 568px wide and over */

@media screen and (min-width: 568px) and (max-width:813px) {
    
    .game-title {
        font-size: 0.5em;
    }

    .mute-button button {
        top: 10px;
        font-size: 0.75em;
    }

    .hit,
    .no-hit {
        transform: scale(0.5);
    }
    
    .time {
        transform: scale(0.5);
        top: 0;
        width: 150px;
    }

    .hole-area {
        width: 600px;
        height: 200px;
        margin: 100px auto 0 auto;
    }

    .mole-hole:after {
        transform: scale(1);
        left: 5%;
        bottom: 0;
    }

    .instructions {
        bottom: -32px;
    }

    .boris {
        background-size: 45%;
    }

    .final-score,
    .feedback {
        transform: scale(0.7);
        left: 0;
    }
}

